Añade estilos a la estructura de html

--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
                                 </div>
                                 <div class="platillo">
                                     <p class="nombre">
-                                        Lorem ipsum dolor sit amet.
+                                        Lorem ipsum dolor sit amet .
                                     </p>
                                     <p class="precio">S/ 25.00</p>
                                     <p class="descripcion">
                                         Lorem ipsum dolor sit amet consectetur
-                                        adipisicing elit.
+                                        adipisicing elit.sit amet consectetur
                                     </p>
                                 </div>
                                 <div class="platillo">
@@ -195,7 +195,7 @@
             <section class="mapa">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62419.22611871474!2d-77.09885835016871!3d-12.098344667259623!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c970336b0725%3A0xae2a6f969b48786e!2sPlaza%20San%20Miguel!5e0!3m2!1ses-419!2spe!4v1717098656324!5m2!1ses-419!2spe"
-                    width="600"
+                    width="1600"
                     height="450"
                     style="border: 0"
                     allowfullscreen=""
